--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <meta name=generator content="Hugo 0.92.1">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href=https://ninehills.github.io/favicon.ico>
-<link rel=alternate type=application/rss+xml href=https://ninehills.github.io/index.xml title=九原山>
+<link rel="shortcut icon" href=https://blog.ninehills.tech/favicon.ico>
+<link rel=alternate type=application/rss+xml href=https://blog.ninehills.tech/index.xml title=九原山>
 <link rel=stylesheet href=/css/style.min.css>
+<script src=https://utteranc.es/client.js repo=ninehills/ninehills.github.io issue-term=pathname theme=github-light crossorigin=anonymous async></script>
 <title>九原山</title>
 </head>
 <body><header id=banner>
-<h2><a href=https://ninehills.github.io/>九原山</a></h2>
+<h2><a href=https://blog.ninehills.tech/>九原山</a></h2>
 <nav>
 <ul>
 </ul>
@@ -18,7 +19,7 @@
 <h3>Posts</h3>
 <ul id=posts>
 <li>
-<a href=https://ninehills.github.io/posts/my-first-post/>
+<a href=https://blog.ninehills.tech/posts/my-first-post/>
 Hello world
 <small><time>Feb 11, 2022</time></small>
 </a>
