deploy: a78249daef935f500973ca5753e9bb83f87b16aa

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <h3>Posts</h3>
 <ul id=posts>
 <li>
+<a href=https://blog.ninehills.tech/posts/p2pfile/>
+小工具 p2pfile - 内网大文件P2P分发
+<small><time>Feb 11, 2022</time></small>
+</a>
+</li>
+<li>
 <a href=https://blog.ninehills.tech/posts/my-first-post/>
 Hello world
 <small><time>Feb 11, 2022</time></small>
