deploy: 4d36fa4d98c682c7418931b69643a8fdee0f8100

--- a/404.html
+++ b/404.html
@@ -3,11 +3,11 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Tags | 九原山</title>
+<title>404 Page not found | 九原山</title>
 <meta name=keywords content>
 <meta name=description content>
 <meta name=author content>
-<link rel=canonical href=https://blog.ninehills.tech/tags/>
+<link rel=canonical href=https://blog.ninehills.tech/404.html>
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://blog.ninehills.tech/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.ninehills.tech/favicon-16x16.png>
@@ -17,16 +17,15 @@
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.92.1">
-<link rel=alternate type=application/rss+xml href=https://blog.ninehills.tech/tags/index.xml>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><meta property="og:title" content="Tags">
+</noscript><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://blog.ninehills.tech/tags/">
+<meta property="og:url" content="https://blog.ninehills.tech/404.html">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Tags">
+<meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content>
 </head>
 <body class=list id=top>
@@ -45,11 +44,7 @@
 </nav>
 </header>
 <main class=main>
-<header class=page-header>
-<h1>Tags</h1>
-</header>
-<ul class=terms-tags>
-</ul>
+<div class=not-found>404</div>
 </main>
 <footer class=footer>
 <span>&copy; 2022 <a href=https://blog.ninehills.tech/>九原山</a></span>
